--- a/_posts/2016-02-20-bus.md
+++ b/_posts/2016-02-20-bus.md
@@ -6,7 +6,7 @@ date: 2016-02-20 14:15:00
 categories: development
 tags: JavaScript AngularJS Sass Grunt
 featured_image: '/img/bus/maps.gif'
-project_link: 'http://localhost:4000/projects/migrant-workers.html'
+project_link: 'https://nicholas-ko-zy.github.io/projects/migrant-workers.html'
 button_icon: 
 button_text: 'Visit Project'
 lead_text: 'An analysis of origin-destination bus travel data for migrant dorms in Woodlands.'
