--- a/_posts/2016-02-19-stroke.md
+++ b/_posts/2016-02-19-stroke.md
@@ -8,6 +8,6 @@ tags: WordPress PHP Sass
 featured_image: '/img/stroke/stroke-featured.png'
 project_link: 'http://localhost:4000/projects/stroke.html'
 button_text: 'Visit Project'
-button_icon:
+button_icon: ''
 lead_text: 'Predict stroke using unbalanced dataset.'
 ---
