--- a/_posts/2022-12-03-mangrove.md
+++ b/_posts/2022-12-03-mangrove.md
@@ -7,7 +7,7 @@ categories: development design
 tags: Jekyll Sass Bootstrap
 featured_image: '/img/mangrove/heatmap_1.png'
 project_link: 'http://localhost:4000/projects/mangrove.html'
-button_icon: 
+button_icon: ''
 button_text: 'Visit Project'
 lead_text: "Exploratory Analysis of 5000 unique mangrove trees on Pulau Ubin Island, Singapore."
 ---
