--- a/_posts/2016-02-19-stroke.md
+++ b/_posts/2016-02-19-stroke.md
@@ -6,7 +6,7 @@ date: 2016-02-20 15:56:00
 categories: development design
 tags: WordPress PHP Sass
 featured_image: '/img/stroke/stroke-featured.png'
-project_link: 'http://localhost:4000/projects/stroke.html'
+project_link: 'https://nicholas-ko-zy.github.io/projects/stroke.html'
 button_text: 'Visit Project'
 button_icon: ''
 lead_text: 'Predict stroke using unbalanced dataset.'
