--- a/_posts/2016-02-20-bus.md
+++ b/_posts/2016-02-20-bus.md
@@ -1,7 +1,7 @@
 ---
 layout: inner
 position: right
-title: 'Bus Travel Patterns of Migrant Workers.'
+title: 'Bus Travel Patterns of Migrant Workers'
 date: 2016-02-20 14:15:00
 categories: development
 tags: JavaScript AngularJS Sass Grunt
